k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
      metadata:
        labels:
          app: test
      spec:
        containers:
          - name: pvc-test
            image: <IMAGE>
            ports:
              - containerPort: 80
            volumeMounts:
              - name: data-volume
                mountPath: /app

        volumes:
         - name: data-volume
           hostPath:
           path: /data
