k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pvc-test
spec:
  selector:
    app: test
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
